infra/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: print-quota-service
  namespace: print-quota
  labels:
    app: print-quota-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: print-quota-app
